--- a/Lesson7Portifolio Website Service section/Starter/css/styles.css
+++ b/Lesson7Portifolio Website Service section/Starter/css/styles.css
@@ -417,6 +417,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
   padding: 0 6rem;
 }
 .stats {
@@ -425,7 +426,13 @@ header {
   align-items: center;
   flex-direction: column;
   margin: 0 1rem;
+  width: 30%;
   /* background-color: #be185d; */
+}
+@media only screen and (max-width: 650px) {
+  .stats {
+    width: 100%;
+  }
 }
 .stat-details {
   padding: 3rem 0;
